# Progetto-SCPA

./: .gitignore  Makefile  README.md  a.out  access.sh  access_luca.sh  app  checks.c  conversions_parallel.c  conversions_serial.c  create_mtx_coo.c  csr_header.h  cuda.txt  dot-product-luca.c  dot-product-ludo.c  file  header.h  hello_world.c  main.c  mmio.h  mystat  plot-performace.py  plot.py  prodotto_Matrice_vettore.c  prova.txt  samplings.c  samplings.sh  samplings_ellpack.sh  serial-result.txt  serial_product.c  stat.c  thread-1-chunksize-1.txt  thread-10-chunksize-1.txt  thread-100-chunksize-1.txt  thread-2-chunksize-1.txt  thread-25-chunksize-1.txt  thread-250-chunksize-1.txt  thread-3-chunksize-1.txt  thread-4-chunksize-1.txt  thread-5-chunksize-1.txt  (+3 more)
CUDA/: CMakeLists.txt  Makefile  Prodotto_Matrice-Vettore.cu  cuda.sub  header.h  main.c  main.cu  parallel_product.cu  parallel_product_CSR.cu  parallel_product_ELLPACK.cu  readme.md  samplings.cu
CUDA/parallel/: parallel_conversions.c  parallel_product.cu
CUDA/reduction/: reduction_v0.cu
CUDA_dev_query/: CMakeLists.txt  Makefile
distribuzioni/: data-processing  data-processing.c  my-plot.py
doc/: Relazione-SCPA.aux  Relazione-SCPA.tex  Relazione-SCPA.toc
include/: csr_header.h  cuda_header.h  ellpack_header.h  header.h  openmp_header.h
lib/: mmio.c
openMP/: Makefile  header.h  main.c  openMP  parallel_product.c  plot-performace.py  samplings.c  samplings.csv  samplings_parallel.csv  samplings_parallel_CSR.csv  samplings_parallel_ELLPACK.csv  samplings_serial.csv  samplings_serial_CSR.csv  (+1 more)
(+124 files in other folders)
